--- a/02_React/Assignment_React_FirstReact/index.html
+++ b/02_React/Assignment_React_FirstReact/index.html
@@ -6,13 +6,22 @@
 
   <body>
     <div id="root">
-      <h1>First React page rendering...</h1>
+      <h3>First React page rendering...</h3>
     </div>
+    <div id="root1"></div>
+    <div id="root2"></div>
     <script crossorigin="" src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script crossorigin="" src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script>
       const App = React.createElement("h1", {}, "Our First React page has rendered");
-      ReactDOM.render(App, document.getElementById("root"));
+      const App2 = React.createElement("h5", {}, "this is 2 seconds later...");
+      setTimeout(() => {
+        ReactDOM.render(App, document.getElementById("root1"));
+      }, 2000);
+      setTimeout(() => {
+        ReactDOM.render(App2, document.getElementById("root2"));
+      }, 4000);
+      // ReactDOM.render(App, document.getElementById("root2"));
     </script>
   </body>
 </html>
